2008-05-06  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* BindingSource.cs: New tests for ISupportInitializeNotification
	property.

2008-05-04  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* BindingSourceTest.cs: New tests for Sort property.

2008-05-04  Everaldo Canuto  <ecanuto@novell.com>

	* LinkLabelTest.cs: Enable tests related to bug #346156.

2008-05-04  Everaldo Canuto  <ecanuto@novell.com>

	* LinkLabelTest.cs: Enable tests related to bug #346154.

2008-05-03  Everaldo Canuto  <ecanuto@novell.com>

	* LinkLabelTest.cs: Put LinkTest and LinkCollectionTest classes outside of 
	LinkLabelTest class, subclasses looks to be not work with nunit.

2008-05-03  Everaldo Canuto  <ecanuto@novell.com>

	* LinkLabelTest.cs: Remove NotWorking attribute from TestLinkArea, it is
	fixed in r102445.

2008-05-01  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridViewRowCollectionTest.cs: Disable test requiring shared rows.
	* DataGridViewRowTest.cs, DataGridViewCellTest.cs: Disable
	tests requiring DGVComboBox.

2008-05-01  Jonathan Pobst  <monkey@jpobst.com>

	* InputLanguageTest.cs: Add test for bug #385506.

2008-04-29  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* BindingSourceTest.cs: New Filter/RemoveFilter tests.

2008-04-29  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* DragAndDropTest.cs: New test.

2008-04-28  Jonathan Pobst  <monkey@jpobst.com>
	
	* ScrollBarTest.cs: Add test for bug #384182.

2008-04-24  Jonathan Pobst  <monkey@jpobst.com>

	* InputLanguageTest.cs: Add test for bug #373871.

2008-04-23  Ivan N. Zlatev  <contact@i-nz.net>

	* ControlTest.cs: Remove the focusing tests from the validation 
	test. They fail on X11 anyway due to a long standing X11 visibility 
	asynchronicity problem in MWF. The Vaildation test do pass.

2008-04-23  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridViewRowHeaderTest.cs: Comment font dependent tests.

2008-04-23  Carlos Alberto Cortez <calberto.cortez@gmail.com>
